# e57-js

./: .gitignore  CLAUDE.md  CMakeLists.txt  Dockerfile  README.md  build.mjs  docker-compose.yml  file.e57  index.js  package-lock.json  package.json  test_read.mjs  tsup.config.js
.github/workflows/: publish.yml
include/: E57FormatUtils.h  e57.h  e57_reader.hpp  e57_writer.hpp  em_promise.hpp  image_header.hpp  point.h  point.hpp  work_data.hpp
libE57/include/: E57Format.h  E57SimpleReader.h
libE57/src/: E57SimpleReader.cpp
libE57Format/: CMakeLists.txt
libE57Format/src/: CompressedVectorNode.cpp  CompressedVectorWriterImpl.cpp  E57SimpleWriter.cpp  ReaderImpl.cpp  ReaderImpl.h  WriterImpl.cpp
scripts/: docker-build.sh  post_build.js
src/: E57FormatUtils.cpp  e57.cpp  main.cpp  point.cpp
src/cpp/: e57.cpp  e57_reader.cpp  e57_writer.cpp  em_promise.cpp  image_header.cpp  main.cpp  point.cpp
src/js/: e57_init.js  e57_reader.js  e57_writer.js  image_2d.js  index.js
tests/: io.async.test.js  io.test.js  utils.js
